# axumapi

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/axumapiserver/: main.py  routes.yaml
examples/axumapiserver/starbucks/: menu.py
examples/music/: artists.py  songs.py
examples/spotify/albums/: __init__.py  user.py
examples/spotify/artists/: __init__.py
examples/tests/: test_artists.py  test_songs.py
handlers/: Cargo.toml
handlers/src/: lib.rs  root.rs
handlers/src/utils/: invoke.rs
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs  main.rs  server.rs
src/handler/: helpers.rs
src/handlers/: root.rs  router.rs
src/handlers/utils/: invoke.rs  request.rs  router.rs
