[package]
name = "axumapi"
authors = ["ashupednekar"]
version = "0.1.2"
edition = "2021"
description = "This is aimed to be the fastest api mux for python packages with axum as the underlying server"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }
serde_json = "1.0.116"
#pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
